Create the Checkout Logic DLL
Creation of the Business Logic DLL. Initialialy adding in the ScanItem function to allow the development for the scanning tests to work.

--- a/CheckoutService/CheckoutService.csproj
+++ b/CheckoutService/CheckoutService.csproj
@@ -80,6 +80,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="CheckoutLogic\CheckoutLogic.csproj">
+      <Project>{f0a13910-619a-4690-a8ec-ac1d0c939417}</Project>
+      <Name>CheckoutLogic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
