--- a/CheckoutService/CheckoutLogic/CheckoutLogic.csproj
+++ b/CheckoutService/CheckoutLogic/CheckoutLogic.csproj
@@ -47,7 +47,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="prices.json" />
+    <None Include="prices.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
